export const snapshot = {};

snapshot[`it can copy, compile and vendor entrypoints producing valid import maps 1`] = `
{
  imports: {
    "./client.tsx": "/client.0774b963.js",
    "./src/app.tsx": "/src/app.375c911d.js",
    "./src/components/Test.tsx": "/src/components/Test.d8e044d9.js",
    "https://deno.land/": "/vendor/browser/deno.land/",
    "https://esm.sh/": "/vendor/browser/esm.sh/",
    react: "/vendor/browser/esm.sh/stable/react@18.2.0/es2022/react.625c3f59.js",
    "react-dom/client": "/vendor/browser/esm.sh/v106/react-dom@18.2.0/es2022/client.c01f26e0.js",
    "react/jsx-runtime": "/vendor/browser/esm.sh/stable/react@18.2.0/es2022/jsx-runtime.9bacc56c.js",
    twind: "/vendor/browser/esm.sh/v106/twind@0.16.17/es2022/twind.5b9e5a81.js",
    "ultra/hooks/use-asset.js": "/vendor/browser/deno.land/x/ultra@v2.1.7/hooks/use-asset.d43ee186.js",
    "ultra/hydrate.js": "/vendor/browser/deno.land/x/ultra@v2.1.7/hydrate.c1c2367e.js",
  },
  scopes: {
    "/vendor/browser/deno.land/": {
      "/x/": "/vendor/browser/deno.land/x/",
    },
    "/vendor/browser/esm.sh/": {
      "/stable/": "/vendor/browser/esm.sh/stable/",
      "/v106/": "/vendor/browser/esm.sh/v106/",
    },
  },
}
`;

snapshot[`it can copy, compile and vendor entrypoints producing valid import maps 2`] = `
{
  imports: {
    "./server.tsx": "./server.js",
    "./src/app.tsx": "./src/app.375c911d.js",
    "./src/components/Test.tsx": "./src/components/Test.d8e044d9.js",
    "https://deno.land/": "./vendor/server/deno.land/",
    "https://esm.sh/": "./vendor/server/esm.sh/",
    react: "./vendor/server/esm.sh/stable/react@18.2.0/deno/react.js",
    "react-dom/server": "./vendor/server/esm.sh/v106/react-dom@18.2.0/deno/server.js",
    "react/jsx-runtime": "./vendor/server/esm.sh/stable/react@18.2.0/deno/jsx-runtime.js",
    twind: "./vendor/server/esm.sh/v106/twind@0.16.17/deno/twind.js",
    "ultra/hooks/use-asset.js": "./vendor/server/deno.land/x/ultra@v2.1.7/hooks/use-asset.js",
    "ultra/server.ts": "./vendor/server/deno.land/x/ultra@v2.1.7/server.ts",
  },
  scopes: {
    "./vendor/server/deno.land/": {
      "/std@0.163.0/": "./vendor/server/deno.land/std@0.163.0/",
      "/std@0.164.0/": "./vendor/server/deno.land/std@0.164.0/",
      "/std@0.173.0/": "./vendor/server/deno.land/std@0.173.0/",
      "/std@0.97.0/": "./vendor/server/deno.land/std@0.97.0/",
      "/x/": "./vendor/server/deno.land/x/",
    },
    "./vendor/server/esm.sh/": {
      "/stable/": "./vendor/server/esm.sh/stable/",
      "/v106/": "./vendor/server/esm.sh/v106/",
      "/v93/": "./vendor/server/esm.sh/v93/",
    },
  },
}
`;

snapshot[`it can copy and compile entrypoints producing valid import maps 1`] = `
{
  imports: {
    "./client.tsx": "/client.0774b963.js",
    "./src/app.tsx": "/src/app.375c911d.js",
    "./src/components/Test.tsx": "/src/components/Test.d8e044d9.js",
    "https://deno.land/": "https://deno.land/",
    "https://esm.sh/": "https://esm.sh/",
    react: "https://esm.sh/stable/react@18.2.0/es2022/react.js",
    "react-dom/client": "https://esm.sh/v106/react-dom@18.2.0/es2022/client.js",
    "react/jsx-runtime": "https://esm.sh/stable/react@18.2.0/es2022/jsx-runtime.js",
    twind: "https://esm.sh/v106/twind@0.16.17/es2022/twind.js",
    "ultra/hooks/use-asset.js": "https://deno.land/x/ultra@v2.1.7/hooks/use-asset.js",
    "ultra/hydrate.js": "https://deno.land/x/ultra@v2.1.7/hydrate.js",
  },
  scopes: {
    "https://deno.land/": {
      "/x/": "https://deno.land/x/",
    },
    "https://esm.sh/": {
      "/stable/": "https://esm.sh/stable/",
      "/v106/": "https://esm.sh/v106/",
    },
  },
}
`;

snapshot[`it can copy and compile entrypoints producing valid import maps 2`] = `
{
  imports: {
    "./server.tsx": "./server.js",
    "./src/app.tsx": "./src/app.375c911d.js",
    "./src/components/Test.tsx": "./src/components/Test.d8e044d9.js",
    "https://deno.land/": "https://deno.land/",
    "https://esm.sh/": "https://esm.sh/",
    react: "https://esm.sh/stable/react@18.2.0/deno/react.js",
    "react-dom/server": "https://esm.sh/v106/react-dom@18.2.0/deno/server.js",
    "react/jsx-runtime": "https://esm.sh/stable/react@18.2.0/deno/jsx-runtime.js",
    twind: "https://esm.sh/v106/twind@0.16.17/deno/twind.js",
    "ultra/hooks/use-asset.js": "https://deno.land/x/ultra@v2.1.7/hooks/use-asset.js",
    "ultra/server.ts": "https://deno.land/x/ultra@v2.1.7/server.ts",
  },
  scopes: {
    "https://deno.land/": {
      "/std@0.163.0/": "https://deno.land/std@0.163.0/",
      "/std@0.164.0/": "https://deno.land/std@0.164.0/",
      "/std@0.173.0/": "https://deno.land/std@0.173.0/",
      "/std@0.97.0/": "https://deno.land/std@0.97.0/",
      "/x/": "https://deno.land/x/",
    },
    "https://esm.sh/": {
      "/stable/": "https://esm.sh/stable/",
      "/v106/": "https://esm.sh/v106/",
      "/v93/": "https://esm.sh/v93/",
    },
  },
}
`;
